--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,12 @@ body {
   background-color: rgb(228, 226, 226)
 }
 
+header {
+  display: flex;
+  align-items: center;
+  width: 845px;
+}
+
 #nav-meny {
   color: rgb(30, 30, 30)
 }
@@ -38,4 +44,10 @@ h3 {
   width: 100px;
   height: auto;
   margin: 2vh;
+}
+
+.avatar {
+  width: 400px;
+  height: auto;
+  margin: 4vh;
 }
