--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-
   background-color: rgb(228, 226, 226)
 }
 
@@ -18,7 +17,10 @@ header {
 }
 
 #nav-meny {
-  color: rgb(30, 30, 30)
+  color: rgb(30, 30, 30);
+  font-size: larger;
+  font-family: 'Ubuntu', sans-serif;
+  margin: 8vh;
 }
 
 #nav-meny a:visited {
@@ -38,7 +40,17 @@ h3 {
   font-family: 'Ubuntu', sans-serif;
 }
 
+h4 {
+  font-size: medium;
+  font-family: 'Times New Roman', Times, serif;
+  margin: 8vh;
+}
+
 /* Image css */
+
+#linkLogos {
+  margin-left: 6vh;
+}
 
 #linkLogos img {
   width: 100px;
