--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,10 +32,24 @@ header {
 
 .nav-link {
   text-decoration: none;
+  margin-right: 5vh;
 }
 
 .nav-link.active {
   text-decoration: underline;
+}
+
+a {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+p {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+h1 {
+  font-family: 'Ubuntu', sans-serif;
+  margin-left: 10%;
 }
 
 h3 {
@@ -69,6 +83,13 @@ h4 {
   margin-left: 17%;
 }
 
+@media (max-width: 768px) {
+  .avatar {
+    width: 80%; 
+    margin-left: auto;
+  }
+}
+
 #postmanSC {
   width: 60%;
   height: auto;
@@ -78,16 +99,51 @@ h4 {
 
 #aboutMeText {
   background-color: rgb(207, 176, 176);
+  box-sizing: border-box; 
+  border: 4px solid rgb(28, 28, 28); 
   margin-left: 10%;
-  width: 40%;
+  margin-right: 10%;
+  width: 40%; 
   padding: 2vh;
+}
+
+@media (max-width: 768px) {
+  #aboutMeText {
+    width: 80%; 
+  }
 }
 
 /* My Projects page */
 
 #apiDbAssignment {
-  background-color: lightgray; 
-  padding: 1rem; 
+  background-color: rgb(207, 176, 176);
+  
   box-sizing: border-box; 
-  border: 2px solid gray; 
+  border: 4px solid rgb(28, 28, 28); 
+  margin-left: 10%;
+  margin-right:10%;
+  width: 80%;
+  padding: 2vh;
 }
+
+#cypressTesting {
+  background-color: rgb(207, 176, 176);
+  
+  box-sizing: border-box; 
+  border: 4px solid rgb(28, 28, 28); 
+  margin-left: 10%;
+  margin-right:10%;
+  margin-top: 10px;
+  width: 80%;
+  padding: 2vh;
+}
+
+#apiDbAssignment img, #cypressTesting img {
+  margin-top: 20px; 
+  display: block;   
+  max-width: 100%;   
+  height: auto;      
+  box-sizing: border-box; 
+}
+
+
