--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Poiret+One&family=Spirax&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* Generall css */
-
+/* General */
 :root {
-  font-size: 18px;
+  font-size: 14px;
+  --background-color: #f0f0f0;
+  --text-color: rgb(30, 30, 30);
+  --link-color: #8B0000;
 }
 
 body {
-  background-color: rgb(228, 226, 226)
+  background-color: var(--background-color);
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 header {
+  background-color: var(--background-color);
+  padding: 0;
+  line-height: 1;
   display: flex;
   align-items: center;
-  width: 845px;
 }
 
-#nav-meny {
-  color: rgb(30, 30, 30);
-  font-size: larger;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.header-title {
+  margin: 10px 0 0 0;
+  padding: 0;
+  font-size: 1.2em;
+  font-weight: normal;
+}
+
+.header-title strong {
+  font-weight: bold;
+}
+
+.header-title span {
+  font-weight: normal;
+  margin-left: 10px;
+}
+
+.header-nav {
+  display: flex;
+  gap: 10px;
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+
+.header-nav a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 0.9em;
+  margin: 0;
+  padding: 0;
+}
+
+.content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  text-align: center;
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 469px;
+  height: 469px;
+  margin-right: 44px;
+}
+
+.text-container {
+  max-width: 562.5px;
+  text-align: left;
+}
+
+#hello {
+  font-size: 2.5em;
+  line-height: 1.3;
   font-family: 'Ubuntu', sans-serif;
-  margin-left: 10%;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
+  margin: 0;
+  padding: 0;
 }
 
-#nav-meny a:visited {
-  color: inherit;
-  text-decoration: none;
+.sub-title {
+  font-size: 1.5em;
+  margin-top: 10px;
 }
 
-.nav-link {
-  text-decoration: none;
-  margin-right: 5vh;
+.description {
+  font-size: 1.25em;
+  line-height: 1.6;
+  margin-top: 10px;
 }
 
+/* Links */
 .nav-link.active {
   text-decoration: underline;
 }
@@ -47,103 +113,186 @@ p {
   font-family: 'Ubuntu', sans-serif;
 }
 
-h1 {
+h1, h3 {
   font-family: 'Ubuntu', sans-serif;
-  margin-left: 10%;
-}
-
-h3 {
-  font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h4 {
   font-size: medium;
   font-family: Arial, Helvetica, sans-serif;
-
-  font-weight: 100;
 }
 
-/* Image css */
-
-#linkLogos {
-  margin-left: 10%;
+/* Footer */
+.footer {
+  width: 100%;
+  background-color: var(--background-color);
+  padding: 20px 0;
+  border-top: 1px solid #ddd;
 }
 
-#linkLogos img {
-  width: 60px;
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  font-size: 0.8em;
+  text-align: center;
+}
+
+.contact-item p {
+  margin: 0;
+  line-height: 2.5;
+}
+
+.contact-item {
+  margin: 0;
+  flex: 1;
+}
+
+.profiles {
+  flex: 1;
+}
+
+.profiles p {
+  margin-bottom: 10px;
+}
+
+.profile-icon {
+  width: 24px;
+  height: 24px;
+  margin: 0 10px;
+}
+
+/* resume.js */
+.resume-section {
+  padding: 20px 40px;
+  background-color: var(--background-color);
+}
+
+.resume-content {
+  margin-bottom: 40px;
+}
+
+.section-title {
+  font-size: 1.8em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.education, .experience {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.education-item, .experience-item {
+  width: 48%;
+}
+
+.education-item h3, .experience-item h3 {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.education-item h4, .experience-item h4 {
+  font-size: 1.1em;
+  margin-bottom: 10px;
+}
+
+.education-item ul, .experience-item ul {
+  font-size: 1em;
+  margin-bottom: 5px;
+  padding-left: 20px;
+}
+
+.education-item ul li, .experience-item ul li {
+  list-style-type: disc;
+  margin-bottom: 5px;
+}
+
+/* projects.js */
+.projects-section {
+  padding: 20px 20px;
+  background-color: var(--background-color);
+}
+
+.projects-content {
+  margin-bottom: 20px;
+}
+
+.projects-content h1 {
+  font-size: 1.4em;
+  font-weight: bold;
+  margin-bottom: 15px;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.project-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-direction: row-reverse;
+}
+
+.project-text {
+  width: 45%;
+  padding-right: 15px;
+  box-sizing: border-box;
+}
+
+.project-image {
+  width: 45%;
+  box-sizing: border-box;
+}
+
+.project-image img {
+  width: 100%;
   height: auto;
-  margin-right: 2vh;
-  margin-bottom: 2vh;
-  margin-top: 2vh;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.avatar {
-  width: 38%;
-  height: auto;
-  margin-left: 17%;
+.project-item:not(:last-child) {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 20px;
 }
 
-@media (max-width: 768px) {
-  .avatar {
-    width: 80%; 
-    margin-left: auto;
-  }
+.project-item h3 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
 
-#postmanSC {
-  width: 60%;
-  height: auto;
+.project-item p {
+  font-size: 0.8em;
+  margin-bottom: 15px;
+  line-height: 1.4;
 }
 
-/* About me page */
-
-#aboutMeText {
-  background-color: rgb(207, 176, 176);
-  box-sizing: border-box; 
-  border: 4px solid rgb(28, 28, 28); 
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 40%; 
-  padding: 2vh;
+.project-item a {
+  font-size: 0.9em;
+  text-decoration: none;
+  color: var(--link-color);
+  font-weight: bold;
+  margin-bottom: 10px;
+  display: inline-block;
 }
 
-@media (max-width: 768px) {
-  #aboutMeText {
-    width: 80%; 
-  }
+.project-item a:hover {
+  text-decoration: underline;
 }
-
-/* My Projects page */
-
-#apiDbAssignment {
-  background-color: rgb(207, 176, 176);
-  
-  box-sizing: border-box; 
-  border: 4px solid rgb(28, 28, 28); 
-  margin-left: 10%;
-  margin-right:10%;
-  width: 80%;
-  padding: 2vh;
-}
-
-#cypressTesting {
-  background-color: rgb(207, 176, 176);
-  
-  box-sizing: border-box; 
-  border: 4px solid rgb(28, 28, 28); 
-  margin-left: 10%;
-  margin-right:10%;
-  margin-top: 10px;
-  width: 80%;
-  padding: 2vh;
-}
-
-#apiDbAssignment img, #cypressTesting img {
-  margin-top: 20px; 
-  display: block;   
-  max-width: 100%;   
-  height: auto;      
-  box-sizing: border-box; 
-}
-
-
