--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,110 +226,7 @@ h4 {
   margin-bottom: 5px;
 }
 
-.skills-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 10px;
-}
-
-.skills-container > div {
-  flex: 1 1 45%;
-}
-
-.skills-container > div ul {
-  margin: 0;
-  padding-left: 20px;
-  list-style-type: disc;
-}
-
-.skills-container > div strong {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 1.1em;
-}
-
-
-/* projects.js */
-.projects-section {
-  padding: 20px 20px;
-  background-color: var(--background-color);
-}
-
-.projects-content {
-  margin-bottom: 20px;
-}
-
-.projects-content h1 {
-  font-size: 1.4em;
-  font-weight: bold;
-  margin-bottom: 15px;
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.project-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  flex-direction: row-reverse;
-}
-
-.project-text {
-  width: 45%;
-  padding-right: 15px;
-  box-sizing: border-box;
-}
-
-.project-image {
-  width: 45%;
-  box-sizing: border-box;
-}
-
-.project-image img {
-  width: 100%;
-  height: auto;
-  max-height: 200px;
-  object-fit: cover;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.project-item:not(:last-child) {
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 20px;
-}
-
-.project-item h3 {
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-bottom: 8px;
-}
-
-.project-item p {
-  font-size: 0.8em;
-  margin-bottom: 15px;
-  line-height: 1.4;
-}
-
-.project-item a {
-  font-size: 0.9em;
-  text-decoration: none;
-  color: var(--link-color);
-  font-weight: bold;
-  margin-bottom: 10px;
-  display: inline-block;
-}
-
-.project-item a:hover {
-  text-decoration: underline;
-}
-
 /* Hobby-images */
-
 .hobbies-container {
   padding: 20px;
   text-align: center;
@@ -391,7 +288,7 @@ h4 {
 
 .animation-item {
   text-align: center;
-  max-width: 200px; 
+  max-width: 200px;
 }
 
 .animation-gif {
@@ -401,15 +298,6 @@ h4 {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
-.animation-description {
-  margin-top: 10px;
-  font-size: 0.9em;
-  color: var(--text-color);
-  font-style: italic;
-}
-
-/* Portraits*/
 
 /* Portrait section styles */
 .portrait-section {
@@ -429,28 +317,25 @@ h4 {
 
 .portrait-gallery {
   display: flex;
-  flex-wrap: wrap; /* Gör bilderna responsiva */
-  gap: 30px; /* Avstånd mellan bilder */
-  justify-content: center; /* Centrerar bilderna */
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
 }
 
 .portrait-item {
-  flex: 1 1 400px; /* Flexibel bredd */
-  max-width: 400px; /* Maximal bredd */
+  flex: 1 1 400px;
+  max-width: 400px;
   text-align: center;
 }
 
 .portrait-image {
-  max-height: 400px; /* Begränsar höjd till 400px */
-  width: auto; /* Anpassar bredd proportionerligt */
-  height: auto; /* Bibehåller proportioner */
-  object-fit: contain; /* Gör att bilden passar in i sin box */
-  border-radius: 10px; /* Rundar kanterna */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Lägger till en skugga */
+  max-height: 400px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
-
-
 
 /* Lightbox */
 .lightbox {
